--- a/main/css/style.css
+++ b/main/css/style.css
@@ -147,12 +147,6 @@ footer {
 #text-align{
   text-align:center;
 }
-.align_left{
-  text-align:left;
-}
-.align_right{
-  text-align:right;
-}
 
 a:link, a:visited{
   text-decoration:none;
@@ -164,7 +158,12 @@ a:hover, a:focus{
 .logo a:focus, .logo a:hover{
   text-decoration:none;
 }
-
+.align_left{
+  text-align:left;
+}
+.align_right{
+  text-align:right;
+}
 /* footer */
 footer{
   margin:30px;
@@ -224,6 +223,7 @@ footer div:first-child{
   color:white;
   margin:10px;
 
+
 }
 
 /* news */
@@ -247,6 +247,55 @@ th {
   font-size: 13px;
 }
 
+.slide {
+    height: 450px;
+    overflow: hidden;
+}
+
+.slide ul {
+    width: 300%;
+    padding:0;
+    display: flex;
+    animation: slide 10s infinite;
+}
+
+.slide li {
+    width: 100%;
+    height: 600px;
+}
+
+
+@keyframes slide {
+  0% {
+      margin-left: 0%;
+  }
+
+  20% {
+      margin-left: 0%;
+  }
+
+  30% {
+      margin-left: -100%;
+  }
+
+  50% {
+      margin-left: -100%;
+  }
+
+  60% {
+      margin-left: -200%;
+  }
+
+  80% {
+      margin-left: -200%;
+  }
+
+
+  100% {
+      margin-left: 0;
+  }
+
+}
 /* shop */
 
 .shop_inner_image{
@@ -365,9 +414,28 @@ th {
 
 #quiz_startbtn{
   position:absolute;
-  top:60%;
+  top:70%;
   left:43%;
+  animation-name: updown;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
 }
+
+@keyframes updown {
+  from {
+      top:60%
+  }
+
+  50% {
+     top:70%
+  }
+
+  to {
+      top:60%
+  }
+}
+
+
 /* join */
 
 #join form{
@@ -401,11 +469,7 @@ th {
 }
 
 /* login */
-#signin{
-  width:320px;
-  margin:auto;
 
-}
 #signin input[placeholder]{
   border: 1px solid #ccc;
   border-radius: 3px;
@@ -414,6 +478,38 @@ th {
   padding:10px;
 }
 #signjoin button{
+  border-radius:0px;
+  width:320px;
+  height:40px;
+  border:none;
+  letter-spacing: 2px;
+  font-size:12px;
+  background-color:rgb(95, 204, 226);
+  color:white;
+  font-size:15px;
+}
+.login_left{
+  text-align:left;
+  width:320px;
+}
+.login_right{
+  text-align:right;
+  width:320px;
+}
+
+/* shop_detail */
+
+#detailimg{
+  margin:100px;
+  float:left;
+}
+
+.detailcontent{
+  padding-top:250px;
+ 
+}
+
+#detailcontent input[button]{
   border-radius:0px;
   width:320px;
   height:40px;
